--- a/Mvc5Examples/Mvc5My/Views/Shared/_MainLayout.cshtml
+++ b/Mvc5Examples/Mvc5My/Views/Shared/_MainLayout.cshtml
@@ -1,13 +1,12 @@
-﻿
-<!DOCTYPE html>
-
+﻿<!DOCTYPE html>
 <html>
 <head>
-   <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
+
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/themes/base/theme.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
 
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
