--- a/Mvc5Examples/Mvc5My/Views/Shared/_MainLayout.cshtml
+++ b/Mvc5Examples/Mvc5My/Views/Shared/_MainLayout.cshtml
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                 </button>
             </nav>
-            <nav class="navbar-collapse collapse">
+            <nav class="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("第1章", "Index", "ch01NavDemos", new { area = "Chapter01", id = "ch01Index" }, null)</li>
                     @for (int i = 2; i <= 9; i++)
